fix landing page text overflow

--- a/src/css/homepage.less
+++ b/src/css/homepage.less
@@ -7,11 +7,11 @@
     .proxima-nova-light;
   }
   h1 {
-    font-size: 80px;
+    font-size: 72px;
   }
 
   h2 {
-    font-size: 54px;
+    font-size: 48px;
   }
 
   h3 {
